--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.12",
     "framer-motion": "^12.6.2",
     "react": "^19.0.0",
