--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.12",
-    "framer-motion": "^12.6.2",
+    "animejs": "^3.2.1",
+    "antd": "^5.24.7",
+    "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
